@@ -1,6 +1,9 @@
 This file documents the revision history for the Mod-Gearman-Worker-Go
 
 
+next:
+          - fix panic when executing non-existing command without a shell
+
 1.0.7    Tue Dec 18 17:17:30 CET 2018
           - send sigterm, then sigint and finally sigkill instead of immediate sigkill on timeout
           - do not kill child processes if the main check plugin exited ok
